force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Fortune King Order</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fortune King Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>