force-app/main/default/objects/Order__c/fields/AppPrice__c.field-meta.xml
<CustomField>
    <fullName>AppPrice__c</fullName>
    <label>AppPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>