force-app/main/default/objects/Order__c/fields/AppSelection__c.field-meta.xml
<CustomField>
    <fullName>AppSelection__c</fullName>
    <label>AppSelection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Crab WonTons</fullName>
            </value>
            <value>
                <fullName>Pork Dumplings</fullName>
            </value>
            <value>
                <fullName>Pork Egg Rolls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>