force-app/main/default/objects/Order__c/fields/DessertPrice__c.field-meta.xml
<CustomField>
    <fullName>DessertPrice__c</fullName>
    <label>DessertPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>