force-app/main/default/objects/Order__c/fields/DessertSelection__c.field-meta.xml
<CustomField>
    <fullName>DessertSelection__c</fullName>
    <label>DessertSelection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Banana Spring Rolls</fullName>
            </value>
            <value>
                <fullName>New York-Style Cheese Cake</fullName>
            </value>
            <value>
                <fullName>The Great Wall of Chocolate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>