force-app/main/default/objects/Order__c/fields/EntreePrice__c.field-meta.xml
<CustomField>
    <fullName>EntreePrice__c</fullName>
    <label>EntreePrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>