force-app/main/default/objects/Order__c/fields/EntreeSelection__c.field-meta.xml
<CustomField>
    <fullName>EntreeSelection__c</fullName>
    <label>EntreeSelection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Beef With Broccoli</fullName>
            </value>
            <value>
                <fullName>Orange Chicken</fullName>
            </value>
            <value>
                <fullName>Peking Duck</fullName>
            </value>
            <value>
                <fullName>Sesame Chicken</fullName>
            </value>
            <value>
                <fullName>Sweet and Sour Chicken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>