force-app/main/default/objects/Order__c/fields/SSPrice__c.field-meta.xml
<CustomField>
    <fullName>SSPrice__c</fullName>
    <label>SSPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>