force-app/main/default/objects/Order__c/fields/SSSelection__c.field-meta.xml
<CustomField>
    <fullName>SSSelection__c</fullName>
    <label>SSSelection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Asian Caesar Salad</fullName>
            </value>
            <value>
                <fullName>Hot and Sour Soup</fullName>
            </value>
            <value>
                <fullName>WonTon Soup</fullName>
            </value>
            <value>
                <fullName>Egg Drop Soup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>